--- a/shoe-store/css/style.css
+++ b/shoe-store/css/style.css
@@ -854,6 +854,7 @@ footer {
     flex-direction: row;
     background: url('../images/images-hero/forest-splash.jpg') 0 20% no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     z-index: -1;
 }
 
@@ -878,7 +879,6 @@ footer {
     background-image: url('../images/images-hero/watch-hero.jpg');
     background-position: center;
     background-size: cover;
-
     min-width: 50vmin;
     height: 75vmin;
     display: flex;
@@ -1433,7 +1433,7 @@ iframe {
     .watch-hero {
         flex-direction: column-reverse;
         height: 100%;
-        background-attachment: unset;
+        background-attachment: scroll;
     }
     .watch-hero-left h1 {
         font-size: 28px;
