--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,6 +210,19 @@ p {
     overflow: hidden;
 }
 
+.toggle {
+    display: none !important;
+}
+
+.more {
+    padding: 1rem !important;
+    margin: 0 !important;
+}
+
+.more-text {
+    font-size: 1rem !important;
+}
+
 hr {
     background-color: var(--pink-primary);
     height: 2px;
@@ -525,6 +538,11 @@ hr {
     line-height: 1.5rem;
 }
 
+#services .services-right .small-icon {
+    width: 2rem;
+    margin-right: 1rem;
+}
+
 /* End of Services Section */
 
 /* Projects Section */
@@ -622,6 +640,7 @@ hr {
     max-width: 30rem;
     line-height: 1.5rem;
     text-align: left;
+    padding: 0 18px;
 }
 
 #about .about .col-left .button {
@@ -662,6 +681,15 @@ hr {
     height: 20%;
     width: 30%;
     z-index: -1;
+}
+
+.content {
+    max-height: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    transition: max-height 0.2s ease-out;
 }
 
 /* End of About Me Section */
@@ -918,6 +946,10 @@ hr {
     #services .services .services-right {
         width: 50%;
     }
+
+    #services .services .services-right .small-icon {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -938,6 +970,13 @@ hr {
 }
 
 @media only screen and (min-width: 1600px) {
+    #statement .statement {
+        width: 60%;
+    }
+
+    #statement .statement hr {
+        width: 70%;
+    }
     #services .section-title {
         padding-top: 5rem;
     }
