--- a/CSS/style.css
+++ b/CSS/style.css
@@ -350,7 +350,7 @@ hr {
 #hero .hero::before {
     content: '';
     position: absolute;
-    background: linear-gradient(transparent 80%, #1c1c1b 100%);
+    background: linear-gradient(transparent 80%, #111111 100%);
     opacity: 1;
     z-index: 1;
     height: 100%;
