--- a/CSS/style.css
+++ b/CSS/style.css
@@ -759,7 +759,6 @@ hr {
 }
 
 #footer .brand {
-    font-size: 2rem;
     font-family: 'Fredoka One', cursive;
     text-transform: uppercase;
     color: white;
@@ -845,6 +844,14 @@ hr {
     #services .service-item-header p {
         padding: 0 1rem;
     }
+
+    #footer .footer .brand h1 {
+        font-size: 2rem !important;
+    }
+
+    .section-title {
+        font-size: 2.8rem;
+    }
 }
 
 @media only screen and (max-width: 660px) {
@@ -882,6 +889,13 @@ hr {
 
     #hero .hero h1 {
         font-size: 5rem;
+    }
+
+    .section-title {
+        font-size: 3.2rem;
+    }
+    #footer .footer .brand h1 {
+        font-size: 2.5rem !important;
     }
 }
 
