Changed padding in projects section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -565,6 +565,7 @@ hr {
     font-size: 1.8rem;
     line-height: 1.5rem;
     text-align: center;
+    padding: 2rem 0;
 }
 
 #projects .projects .project-item-header {
