--- a/bartender/css/style.css
+++ b/bartender/css/style.css
@@ -10,16 +10,16 @@
 
 /* Clear fix hack */
 .clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+  content: '.';
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 /******************************************
@@ -93,7 +93,7 @@ header a {
 }
 
 .resultList li {
-  background-color: white;;
+  background-color: white;
   margin: 5px;
   padding: 20px;
   border: 3px solid black;
@@ -121,7 +121,8 @@ header a {
   padding: 10px;
 }
 
-.searchField, .searchButton {
+.searchField,
+.searchButton {
   padding: 20px;
   font-size: 2rem;
   border: 2px solid black;
@@ -133,7 +134,7 @@ header a {
 
 .searchButton:hover {
   cursor: pointer;
-  background-color: darkgray
+  background-color: darkgray;
 }
 
 .drinkImage {
@@ -141,11 +142,14 @@ header a {
   border: 2px solid black;
 }
 
-.drinkName, #main .contents h2 {
+.drinkName,
+#main .contents h2 {
   font-size: 2rem;
 }
 
-.drinkGlass, .drinkIng, .drinkInst {
+.drinkGlass,
+.drinkIng,
+.drinkInst {
   font-size: 1.5rem;
   font-weight: 400;
   font-family: 'PT Mono', monospace;
@@ -159,6 +163,32 @@ header a {
 /******************************************
 /* MEDIA QUERIES
 /*******************************************/
+@media screen and (max-width: 414px) {
+  .contents {
+    padding: 0;
+  }
+  #main {
+    max-width: unset;
+    margin: 100px 5px;
+    padding: 5px;
+  }
+  .title h1 {
+    font-size: 1.2rem;
+  }
+  .bartender {
+    height: 250px;
+  }
+  .searchField,
+  .searchButton {
+    padding: 10px;
+    border: 2px solid black;
+    font-size: 1.2rem;
+    width: 90%;
+  }
+  .searchButton {
+    margin-top: 10px;
+  }
+}
 
 @media screen and (max-width: 500px) {
   #main {
@@ -169,13 +199,13 @@ header a {
   #main .contents h2 {
     font-size: 1.3rem;
   }
-  .searchField, .searchButton {
+  .searchField,
+  .searchButton {
     padding: 10px;
     font-size: 1.2rem;
     border: 2px solid black;
   }
 }
-
 
 @media screen and (max-width: 1000px) {
   #main {
@@ -183,7 +213,8 @@ header a {
     margin: 100px 20px;
     padding: 5px;
   }
-  .searchField, .searchButton {
+  .searchField,
+  .searchButton {
     padding: 10px;
     font-size: 1.2rem;
     border: 2px solid black;
