--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
 /* Roboto | Regular Medium Bold */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-/* Fedroka One | Regular */
+/* Fredoka One | Regular */
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 /* Baloo 2 | Regular Bold */
@@ -574,6 +574,7 @@ hr {
   align-items: flex-start;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding-bottom: 4rem;
 }
 
 #projects p {
